[package]
name = "serve"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12"
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
cli-clipboard = "0.4.0"
lazy_static = "1.4.0"
network-interface = "0.1.6"
rcgen = "0.10.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
rouille = { version = "3.6.1", features = ["ssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.16"
termion = "2.0.1"
